<resources>
    <string name="app_name">Quoteiko</string>
    <string name="enter_your_quote">Enter Your Quote</string>
    <string name="enter_the_author_of_quote">Enter the Author of Quote</string>
    <string name="create_quote_banner">Create Quote Banner</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="quotes_string">Lorem Ipsum is simply dummy text of the printing and typesetting industry. </string>
    <string name="default_quotes_author">Your Cute Name</string>
    <string name="change_quote">Change Quote</string>
    <string name="change_fontstyle">Change FontStyle</string>
    <string name="change_image">Change Image</string>
    <string name="done">Done</string>
    <string name="selected">SELECTED</string>


</resources>