<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangeStyleFragments.ChangeQuoteFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_margin="4pt"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_your_quote" />

        <EditText
            android:id="@+id/editTextTextMultiLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_margin="4pt"
            android:hint="@string/enter_your_quote"
            android:gravity="start|top"
            android:inputType="textMultiLine" />


        <TextView
            android:textSize="16sp"
            android:layout_margin="4pt"
            android:textColor="@android:color/black"
            android:id="@+id/QuoteByField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_the_author_of_quote" />


        <EditText
            android:layout_margin="4pt"
            android:id="@+id/quote_author_field"
            android:hint="@string/enter_the_author_of_quote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/create_banner_button"
            android:layout_margin="8pt"
            android:layout_gravity="center_horizontal"
            android:text="@string/create_quote_banner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</RelativeLayout>