<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OptionsHolderFragment">

    <HorizontalScrollView
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sample_image_quote">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/change_quote_card"
                android:clickable="true"
                android:focusable="true"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_margin="16dp">

                <ImageView
                    android:tint="@android:color/black"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_feather"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_marginTop="16pt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/change_quote" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/change_fontstyle_card"
                android:clickable="true"
                android:focusable="true"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_margin="16dp">

                <ImageView
                    android:tint="@android:color/black"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_font"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_marginTop="16pt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/change_fontstyle" />

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/change_image_card"
                android:clickable="true"
                android:focusable="true"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_margin="16dp">

                <ImageView
                    android:tint="@android:color/black"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_marginTop="16pt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/change_image" />

            </androidx.cardview.widget.CardView>
        </LinearLayout>

    </HorizontalScrollView>

</FrameLayout>